--- a/index.html
+++ b/index.html
@@ -134,17 +134,24 @@
     }
 
     #back{
-      font-size: 2.2rem;
+      font-size: 1.5rem;
       visibility: hidden;
     }
     #back span{
-      font-size: 1.5rem;
       font-family: 'Work Sans', 'Helvetica Neue', 'Helvetica', 'Arial', sans-serif;
     }
 
     a{
       text-decoration: none;
       color: #2980b9
+    }
+
+    h2{
+      text-align: center;
+    }
+
+    #starRatingHeading{
+      margin-top: 80px;
     }
 
   </style>
