update url in readme to https

--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@ function drawRoseChart() {
     }
 }
 
-// goole charts timeline
+// google charts timeline
 function drawTimeline() {
     const container = document.getElementById('timeline');
     const chart = new google.visualization.Timeline(container);
